add_subdirectory(test-attribs)
add_subdirectory(test-backtrace)
add_subdirectory(test-beuler)
add_subdirectory(test-command-args)
add_subdirectory(test-communications)
add_subdirectory(test-coordinates-initialization)
add_subdirectory(test-cyclic)
add_subdirectory(test-delp2)
add_subdirectory(test-drift-instability)
add_subdirectory(test-drift-instability-staggered)
add_subdirectory(test-fieldgroupComm)
add_subdirectory(test-griddata)
add_subdirectory(test-griddata-yboundary-guards)
add_subdirectory(test-gyro)
add_subdirectory(test-initial)
add_subdirectory(test-interchange-instability)
add_subdirectory(test-interpolate)
add_subdirectory(test-interpolate-z)
add_subdirectory(test-invertable-operator)
add_subdirectory(test-invpar)
add_subdirectory(test-io)
add_subdirectory(test-laplace)
add_subdirectory(test-laplace-petsc3d)
add_subdirectory(test-laplacexy-fv)
add_subdirectory(test-laplacexy-short)
add_subdirectory(test-multigrid_laplace)
add_subdirectory(test-naulin-laplace)
add_subdirectory(test-options-netcdf)
add_subdirectory(test-petsc_laplace)
add_subdirectory(test-petsc_laplace_MAST-grid)
add_subdirectory(test-restart-io)
add_subdirectory(test-restarting)
add_subdirectory(test-slepc-solver)
add_subdirectory(test-smooth)
add_subdirectory(test-snb)
add_subdirectory(test-solver)
add_subdirectory(test-squash)
add_subdirectory(test-stopCheck)
add_subdirectory(test-stopCheck-file)
add_subdirectory(test-twistshift)
add_subdirectory(test-twistshift-staggered)
add_subdirectory(test-vec)
add_subdirectory(test-yupdown)
add_subdirectory(test-yupdown-weights)
